--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,30 @@ branches:
   only:
     - master
 #    - develop
-#script:
-#  - dotnet build
-#  - dotnet test
-before_script:
-  - chmod -R a+x scripts
+# Specify the version of Python to use
+
+before_install:
+  # Set the CLOUDSDK_PYTHON environment variable to use Python 3.8
+  - sudo rm -rf /var/lib/apt/lists/*
+  # Install the required dependencies for the Google Cloud SDK
+  - sudo apt-get update
+  - sudo apt-get install -y curl python3.8
+  - export CLOUDSDK_PYTHON=python3.8
+  # Download and install the Google Cloud SDK
+  - curl https://sdk.cloud.google.com | CLOUDSDK_CORE_DISABLE_PROMPTS=1 bash
+
 script:
-  - ./scripts/build.sh
-  - ./scripts/test.sh
-after_success:
-  - ./scripts/dockerize.sh
-notifications:
-  email:
-    on_success: always
-    on_failure: always
+  - dotnet build
+  - dotnet test
+# [START travis_deploy]
+deploy:
+    provider: gae
+    # Skip cleanup so api_key.py and vendored dependencies are still there    
+    skip_cleanup: true
+    keyfile: devops-dec-ci-cb5905623309.json
+    project: devops-dec-ci
+    version: polyglot
+    default: true
+    on:
+        all_branches: true
+# [END travis_deploy]
