--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: csharp
 mono: none
 sudo: required
-dist: xenial
+dist: focal
 dotnet: 6.0.202
 branches:
   only:
@@ -10,14 +10,13 @@ branches:
 # Specify the version of Python to use
 
 before_install:
-  # Set the CLOUDSDK_PYTHON environment variable to use Python 3.8
   - sudo rm -rf /var/lib/apt/lists/*
-  # Install the required dependencies for the Google Cloud SDK
   - sudo apt-get update
   - sudo apt-get install -y curl python3.8
   - export CLOUDSDK_PYTHON=python3.8
-  # Download and install the Google Cloud SDK
   - curl https://sdk.cloud.google.com | CLOUDSDK_CORE_DISABLE_PROMPTS=1 bash
+  - source $HOME/google-cloud-sdk/path.bash.inc
+  - gcloud components update --quiet
 
 script:
   - dotnet build
