--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,22 @@ before_install:
   - sudo rm -rf /var/lib/apt/lists/*
   - sudo apt-get update
   - sudo apt-get install -y curl python3.8
-  - export CLOUDSDK_PYTHON=python3.8
+  - python3.8 --version # Verificamos la versión de Python
+  - sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 1
+  - python3 --version # Verificamos la versión de Python
+  - pip3 install --upgrade pip
+  - pip3 install virtualenv
+
+install:
+  # Configura el entorno virtual de Python
+  - virtualenv -p python3.8 venv
+  - source venv/bin/activate
+
+  # Instala las dependencias de Python
   - curl https://sdk.cloud.google.com | CLOUDSDK_CORE_DISABLE_PROMPTS=1 bash
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update --quiet
+  - gcloud config set disable_prompts true
 
 script:
   - dotnet build
